--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,24 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies>
-	</dependencies>
-
+	<scm>
+		<connection>scm:git:ssh:git@github.com:nasiriqbal786/sfg-pet-clinic.git</connection>
+		<developerConnection>scm:git:ssh:git@github.com:nasiriqbal786/sfg-pet-clinic.git</developerConnection>
+		<url>https://github.com/nasiriqbal786/sfg-pet-clinic.git</url>
+		<tag>@{project.version}</tag>
+	</scm>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
