working on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ local.properties
 .loadpath
 .factorypath
 /src/main/resources/rebel.xml
-*/target/**
+/target/
+.class
 
 # External tool builders
 .externalToolBuilders/**
