--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,7 @@
 	</properties>
 
 	<scm>
-		<connection>scm:git:ssh:git@github.com:nasiriqbal786/sfg-pet-clinic.git</connection>
-		<developerConnection>scm:git:ssh:git@github.com:nasiriqbal786/sfg-pet-clinic.git</developerConnection>
-		<url>https://github.com/nasiriqbal786/sfg-pet-clinic.git</url>
-		<tag>sfg-pet-clinic-0.0.2</tag>
+		<developerConnection>scm:git:git@github.com:nasiriqbal786/sfg-pet-clinic.git</developerConnection>
 	</scm>
 	<build>
 		<plugins>
