--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,10 @@
 	</properties>
 
 	<scm>
-	<!-- 	<connection>scm:git:ssh:git@github.com:nasiriqbal786/sfg-pet-clinic.git</connection>
+		<connection>scm:git:ssh:git@github.com:nasiriqbal786/sfg-pet-clinic.git</connection>
 		<developerConnection>scm:git:ssh:git@github.com:nasiriqbal786/sfg-pet-clinic.git</developerConnection>
 		<url>https://github.com/nasiriqbal786/sfg-pet-clinic.git</url>
 		<tag>@{project.version}</tag>
-		 -->
-		 <developerConnection>scm:git:ssh:git@github.com:nasiriqbal786/sfg-pet-clinic.git</developerConnection>
-		 <tag>v@{project.version}</tag>
 	</scm>
 	<build>
 		<plugins>
