--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>sfg-pet-clinic</name>
@@ -30,7 +30,7 @@
 		<tag>vvv@{project.version}22</tag>
 		 -->
 		 <developerConnection>scm:git:git@github.com:nasiriqbal786/sfg-pet-clinic.git</developerConnection>
-	  <tag>sfg-pet-clinic-0.0.2</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<build>
 		<plugins>
