--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>com.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
   </parent>
   <artifactId>pet-clinic-web</artifactId>
   <dependencies>
   	<dependency>
   		<groupId>com.springframework</groupId>
   		<artifactId>pet-clinic-data</artifactId>
-  		<version>0.0.3-SNAPSHOT</version>
+  		<version>0.0.3</version>
   	</dependency>
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
